feat: Implement Jellyfin library refresh

--- a/config/app.ini
+++ b/config/app.ini
@@ -11,6 +11,7 @@ library = "/library"
 [jellyfin]
 url = "http://jellyfin:8096"
 api_key = "CHANGEME"
+library_id = ""
 
 [aria2]
 rpc_url = "http://127.0.0.1:6800/jsonrpc"
