feat: Implement asset versioning and update UI to reflect changes

--- a/config/app.ini
+++ b/config/app.ini
@@ -3,6 +3,7 @@ base_url = "http://localhost:8080"
 max_active_downloads = 2
 min_free_space_gb = 5
 session_name = "jffetch_session"
+default_search_limit = 10
 
 [paths]
 downloads = "/downloads"
