--- a/config/app.ini
+++ b/config/app.ini
@@ -29,3 +29,4 @@ provider_secret = "CHANGE_ME_PROVIDER_SECRET"
 [providers]
 kraska_menu_cache_ttl_seconds = 604800
 kraska_debug_enabled = false
+kraska_error_backoff_seconds = 300
