feat: add KraSk2 bulk queue functionality and related settings

--- a/config/app.ini
+++ b/config/app.ini
@@ -30,3 +30,4 @@ provider_secret = "CHANGE_ME_PROVIDER_SECRET"
 kraska_menu_cache_ttl_seconds = 604800
 kraska_debug_enabled = false
 kraska_error_backoff_seconds = 300
+krask2_download_spacing_seconds = 120
