feat: implement per-download speed limit for aria2 and add related configuration options

--- a/config/app.ini
+++ b/config/app.ini
@@ -3,6 +3,7 @@ base_url = "http://localhost:8080"
 max_active_downloads = 2
 min_free_space_gb = 5
 session_name = "jffetch_session"
+session_path = "/var/www/storage/sessions"
 default_search_limit = 10
 
 [paths]
@@ -17,6 +18,7 @@ library_id = ""
 [aria2]
 rpc_url = "http://127.0.0.1:6800/jsonrpc"
 secret = "CHANGEME"
+max_speed_mb_s = 0
 
 [db]
 dsn = "sqlite:/var/www/storage/app.sqlite"
